# speaker-qualifier

./: README.md  pyproject.toml
src/odsc_ai_agents_speaker_evaluation_pipeline/: crew.py  main.py
src/odsc_ai_agents_speaker_evaluation_pipeline/config/: agents.yaml  tasks.yaml
